--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 
@@ -16,3 +18,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+# vercel
+.vercel
