--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@
 # misc
 .DS_Store
 
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # local env files
 .env.local
 .env.development.local
