--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.24.0",
-    "next": "^11.1.2",
+    "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "tailwindcss": "^3.0.0-alpha.1",
-    "@tailwindcss/forms": "^0.4.0-alpha.1",
-    "@tailwindcss/typography": "^0.5.0-alpha.2",
+    "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "@tailwindcss/typography": "^0.5.0-alpha.3",
     "autoprefixer": "^10.3.7",
+    "eslint": "^7.32.0",
     "postcss": "^8.3.9",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "tailwindcss": "^3.0.0-alpha.2"
   }
 }
